@@ -1,6 +1,7 @@
 2.1.0 (TBD)
 
 Added:
+- Add the option to get Planetary Variable subscription results as a CSV file ().
 - A subscription_request.planetary_variable_source function has been added
   (#976).
 - The subscription_request.build_request function has a new option to clip to
